# borgini

./: .buildinfo  .bumpversion.cfg  .pre-commit-config.yaml  CHANGELOG.md  Pipfile  README.rst  borgini.html  genindex.html  index.html  objects.inv  package-lock.json  package.json  py-modindex.html  pyproject.toml  readme.html  requirements.txt  search.html  searchindex.js  setup.py  whitelist.py
.github/workflows/: build.yaml  build.yml  ci.yml
_modules/: borgini.html  index.html
_modules/borgini/: src.html
_sources/: borgini.rst.txt
borgini/: __init__.py  __main__.py  _core.py  _main.py  _version.py  config.py  funcs.py  parser.py
borgini/src/: __init__.py  config.py  funcs.py  parser.py
docs/: borgini.rst  conf.py  index.rst
tests/: TESTS.md  __init__.py  _test.py  conftest.py  expected.py
