[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
    "poetry-core>=1.0.0",
]

[tool.black]
exclude = '''
/(
  | \.git
  | \.mypy_cache
  | _build
  | build
  | dist
)/
'''
line-length = 79
skip-magic-trailing-comma = true

[tool.coverage.report]
fail_under = 100

[tool.coverage.run]
omit = [
    "whitelist.py",
    "borgini/__main__.py",
]

[tool.poetry]
authors = [
    "jshwi <stephen@jshwisolutions.com>",
]
description = "ini config for borg backup"
documentation = "https://borgini.readthedocs.io/en/latest/?badge=latest"
homepage = "https://pypi.org/project/borgini/"
keywords = [
    "backup",
    "deduplicate",
    "borg",
    "ini",
    "config",
]
license = "MIT"
maintainers = [
    "jshwi <stephen@jshwisolutions.com>",
]
name = "borgini"
readme = "README.rst"
repository = "https://github.com/jshwi/borgini"
version = "1.1.0"

[tool.poetry.dependencies]
borgbackup = "^1.1.15"
pygments = "^2.6.1"
python = "^3.8"

[tool.poetry.dev-dependencies]
bump2version = "^1.0.1"
freezegun = "^1.1.0"
ipython = "^7.19.0"
prompt-toolkit = "^3.0.13"
pyaud = "^3.13.5"
pytest = "^6.2.1"
pytest-randomly = "^3.5.0"
restview = "^2.9.2"
sphinx-toolbox = "^2.18.1"

[tool.poetry.scripts]
borgini = "borgini.__main__:main"

[tool.pyaud.audit]
modules = [
    "toc",
    "whitelist",
    "sort-pyproject",
    "format",
    "format-docs",
    "format-str",
    "imports",
    "typecheck",
    "unused",
    "lint",
    "params",
    "test",
    "docs",
]

[tool.pyaud.clean]
exclude = [
    "*.egg*",
    ".mypy_cache",
    ".env",
    "instance",
]

[tool.pyaud.indexing]
exclude = [
    "whitelist.py",
    "conf.py",
    "setup.py",
    "migrations",
]

[tool.pyaud.logging]
disable_existing_loggers = true
version = 1

[tool.pyaud.logging.formatters.standard]
format = "%(asctime)s %(levelname)s %(name)s %(message)s"

[tool.pyaud.logging.handlers.default]
backupCount = 60
class = "logging.handlers.TimedRotatingFileHandler"
filename = "~/.cache/pyaud/log/pyaud.log"
formatter = "standard"
when = "d"

[tool.pyaud.logging.root]
handlers = [
    "default",
]
level = "DEBUG"
propagate = false

[tool.pytest.ini_options]
addopts = [
    "--durations=5",
    "-vv",
    "--color=yes",
    "--cov-report",
    "term-missing",
]
filterwarnings = "ignore::DeprecationWarning"
norecursedirs = [
    "docs",
    "*.egg-info",
    ".git",
    ".mypy_cache",
    ".idea",
]
