[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
    "poetry-core>=1.0.0",
]

[tool.black]
exclude = '''
/(
  | \.git
  | \.mypy_cache
  | _build
  | build
  | dist
)/
'''
line-length = 79
skip-magic-trailing-comma = true

[tool.constcheck]
ignore_strings = [
    "store",
    "store_true",
    "utf-8",
]

[tool.coverage.report]
fail_under = 100

[tool.coverage.run]
omit = [
    "whitelist.py",
    "borgini/__main__.py",
]

[tool.docsig]
check-class = true
summary = true

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 79
multi_line_output = 3
profile = "black"
use_parentheses = true

[tool.poetry]
authors = [
    "jshwi <stephen@jshwisolutions.com>",
]
description = "ini config for borg backup"
documentation = "https://borgini.readthedocs.io/en/latest"
homepage = "https://pypi.org/project/borgini/"
keywords = [
    "backup",
    "deduplicate",
    "borg",
    "ini",
    "config",
]
license = "MIT"
maintainers = [
    "jshwi <stephen@jshwisolutions.com>",
]
name = "borgini"
readme = "README.rst"
repository = "https://github.com/jshwi/borgini"
version = "1.1.0"

[tool.poetry.dependencies]
borgbackup = "^1.1.15"
pygments = "^2.6.1"
python = "^3.8"

[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
freezegun = "^1.1.0"
ipython = "^7.19.0"
prompt-toolkit = "^3.0.13"
pyaud = "^3.13.5"
pylint = "2.15.9"
pytest = "^6.2.1"
pytest-randomly = "^3.5.0"
restview = "^2.9.2"
sphinx-toolbox = "^2.18.1"

[tool.poetry.scripts]
borgini = "borgini.__main__:main"

[tool.pyaud.audit]
modules = [
    "files",
    "format",
    "format-docs",
    "format-str",
    "imports",
    "typecheck",
    "unused",
    "lint",
    "const",
    "params",
    "test",
    "docs",
]

[tool.pyaud.clean]
exclude = [
    ".mypy_cache",
    ".env",
    "node_modules",
]

[tool.pyaud.indexing]
exclude = [
    "whitelist.py",
    "conf.py",
]

[tool.pyaud.logging]
disable_existing_loggers = true
version = 1

[tool.pyaud.logging.formatters.standard]
format = "%(asctime)s %(levelname)s %(name)s %(message)s"

[tool.pyaud.logging.handlers.default]
backupCount = 60
class = "logging.handlers.TimedRotatingFileHandler"
filename = "~/.cache/pyaud/log/pyaud.log"
formatter = "standard"
when = "d"

[tool.pyaud.logging.root]
handlers = [
    "default",
]
level = "DEBUG"
propagate = false

[tool.pytest.ini_options]
addopts = [
    "--durations=5",
    "-vv",
    "--color=yes",
    "--cov-report",
    "term-missing",
]
filterwarnings = "ignore::DeprecationWarning"
norecursedirs = [
    "docs",
    ".git",
    ".mypy_cache",
    ".idea",
    ".pytest_cache"
]
