[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core>=1.0.0"
]

[tool.black]
exclude = '''
/(
  | \.git
  | \.mypy_cache
  | _build
  | build
  | dist
)/
'''
line-length = 79
skip-magic-trailing-comma = true

[tool.constcheck]
ignore_strings = [
  "store",
  "store_true",
  "utf-8"
]

[tool.coverage.report]
fail_under = 100

[tool.coverage.run]
omit = [
  "borgini/__main__.py",
  "whitelist.py"
]

[tool.deptry]
ignore_obsolete = [
  "borgbackup"
]

[tool.docsig]
check-class = true
summary = true

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 79
multi_line_output = 3
profile = "black"
use_parentheses = true

[tool.poetry]
authors = [
  "jshwi <stephen@jshwisolutions.com>"
]
description = "ini config for borg backup"
documentation = "https://borgini.readthedocs.io/en/latest"
homepage = "https://pypi.org/project/borgini/"
keywords = [
  "backup",
  "borg",
  "config",
  "deduplicate",
  "ini"
]
license = "MIT"
maintainers = [
  "jshwi <stephen@jshwisolutions.com>"
]
name = "borgini"
readme = "README.rst"
repository = "https://github.com/jshwi/borgini"
version = "1.2.0"

[tool.poetry.dependencies]
borgbackup = "^1.1.15"
pygments = "^2.6.1"
python = "^3.8"

[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
deptry = "^0.8.0"
freezegun = "^1.1.0"
ipython = "^7.19.0"
pre-commit = "^2.21.0"
prompt-toolkit = "^3.0.13"
pyaud = "^6.1.2"
pylint = "2.15.9"
pytest = "^7.2.0"
pytest-randomly = "^3.5.0"
restview = "^2.9.2"
sphinx-toolbox = "^2.18.1"

[tool.poetry.scripts]
borgini = "borgini.__main__:main"

[tool.pyaud]
audit = [
  "about-tests",
  "commit-policy",
  "const",
  "docs",
  "files",
  "format",
  "format-docs",
  "format-str",
  "imports",
  "lint",
  "params",
  "test",
  "typecheck",
  "unused"
]
exclude = '''
  (?x)^(
    | docs\/conf\.py
    | whitelist\.py
  )$
'''

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--cov-report=term-missing",
  "--durations=5",
  "-vv"
]
filterwarnings = "ignore::DeprecationWarning"
norecursedirs = [
  ".git",
  ".idea",
  ".mypy_cache",
  ".pytest_cache",
  "docs"
]
